microservices-comparison/sistema-microservicios/k8s/ordenes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordenes-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ordenes-service
  template:
    metadata:
      labels:
        app: ordenes-service
    spec:
      containers:
        - name: ordenes-service
          image: ordenes-service:latest
          imagePullPolicy: IfNotPresent 
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: sqlite-storage
              mountPath: "/app/src/database.db"
      volumes:
        - name: sqlite-storage
          persistentVolumeClaim:
            claimName: sqlite-pvc
