microservices-comparison/sistema-microservicios/k8s/usuarios-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: usuarios-service
  template:
    metadata:
      labels:
        app: usuarios-service
    spec:
      containers:
        - name: usuarios-service
          image: usuarios-service
          imagePullPolicy: IfNotPresent 

          ports:
            - containerPort: 3001
          volumeMounts:
                      - name: sqlite-storage
                        mountPath: "/app/src/database.db"
      volumes:
        - name: sqlite-storage
          persistentVolumeClaim:
            claimName: sqlite-pvc
