microservices-comparison/sistema-microservicios/k8s/ordenes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ordenes-service
spec:
  selector:
    app: ordenes-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
