microservices-comparison/sistema-microservicios/k8s/productos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: productos-service
spec:
  selector:
    app: productos-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
  type: NodePort
