microservices-comparison/sistema-microservicios/k8s/usuarios-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuarios-service
spec:
  selector:
    app: usuarios-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: NodePort
